--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
